Upgraded to AutoPlugin and added test scope support